# ./examples/CMakeLists.txt
file(GLOB example_subdirs LIST_DIRECTORIES true RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*")
foreach(subdir ${example_subdirs})
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/CMakeLists.txt")
        add_subdirectory(${subdir})
        get_property(example_targets DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/${subdir}" PROPERTY BUILDSYSTEM_TARGETS)
        foreach(example_target ${example_targets})
            set_target_properties(${example_target} PROPERTIES DEBUG_POSTFIX d)
        endforeach()
    endif()
endforeach()
